<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/barn_pic"
    >

    <TextView
        android:id="@+id/myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titleBlockTopMargin"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:paddingLeft="@dimen/titleBlockPadding"
        android:paddingRight="@dimen/titleBlockPadding"
        android:text="@string/game_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/titleBarTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/VersionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myTitle"
        android:layout_marginTop="5dp"
        android:background="@color/red"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myTitle"
        tools:text="Version 1.2"
        />


    <Button
        android:id="@+id/onePlayerButton"
        android:layout_width="@dimen/actionButtonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elevation="2dp"
        android:text="@string/single_player_game_button"
        android:textSize="@dimen/titlePageButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/VersionInfo"
        style="@style/Game.Button"
        />

    <Button
        android:id="@+id/twoPlayerButton"
        android:layout_width="@dimen/actionButtonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/two_player_game_button"
        android:textSize="@dimen/titlePageButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onePlayerButton"
        style="@style/Game.Button"
        />

    <Button
        android:id="@+id/bluetoothButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/bluetooth_game_button"
        android:textSize="@dimen/titlePageButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twoPlayerButton"
        style="@style/Game.Button"
        />


</android.support.constraint.ConstraintLayout>