<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/barn_pic"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settingsPageTopMargin"
        android:background="@android:color/transparent"
        android:paddingBottom="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/GameModeSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkRed"
                android:padding="10dp"
                android:text="@string/game_board_selection_label"
                android:textSize="@dimen/settingsPageTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Spinner
                android:id="@+id/gameBoardDimensionSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_setup_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/GameModeSpinnerLabel"
                />


            <ImageView
                android:id="@+id/barn_door"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/open_barn_window"
                android:src="@drawable/barn_door"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gameBoardDimensionSpinner"
                app:layout_constraintDimensionRatio="@string/settings_page_barn_door_ratio"
                />

            <!-- Player One Labels -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/player_one_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/settingsPageInputMarginTop"
                android:background="@color/darkRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barn_door">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/player_one_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_one_name_hint"
                    android:maxLines="1"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/settingsPageNameTextSize"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/PlayerOneIconLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@color/darkRed"
                android:text="@string/player_1_icon"
                android:textSize="@dimen/settingsPageTextSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/PlayerOneSpinner"
                app:layout_constraintEnd_toStartOf="@+id/PlayerOneSpinner"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/PlayerOneSpinner"
                />

            <Spinner
                android:id="@+id/PlayerOneSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setupPageSpinnerTopMargin"
                android:background="@drawable/selector_setup_spinner"
                android:drawSelectorOnTop="true"
                android:prompt="@string/SelectIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/PlayerOneIconLabel"
                app:layout_constraintTop_toBottomOf="@id/player_one_name"
                />

            <android.support.constraint.Group
                android:id="@+id/player_one_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="PlayerOneSpinner,PlayerOneIconLabel,player_one_name"
                />


            <!-- Player Two Labels -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/player_two_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/settingsPageInputMarginTop"
                android:background="@color/darkRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PlayerOneSpinner">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/player_two_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_two_name_hint"
                    android:maxLines="1"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/settingsPageNameTextSize"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/PlayerTwoIconLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkRed"
                android:padding="10dp"
                android:text="@string/player_2_icon"
                android:textSize="@dimen/settingsPageTextSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/PlayerTwoSpinner"
                app:layout_constraintEnd_toStartOf="@+id/PlayerTwoSpinner"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/PlayerTwoSpinner"
                />


            <Spinner
                android:id="@+id/PlayerTwoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setupPageSpinnerTopMargin"
                android:background="@drawable/selector_setup_spinner"
                android:prompt="@string/SelectIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/PlayerTwoIconLabel"
                app:layout_constraintTop_toBottomOf="@+id/player_two_name"
                />


            <Button
                android:id="@+id/startGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="@dimen/settingsPagePlayGameTopMargin"
                android:padding="@dimen/settingsPageStartGamePadding"
                android:text="@string/start_game"
                android:textSize="@dimen/settingsPageTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PlayerTwoSpinner"
                style="@style/Game.Button"
                />

            <android.support.constraint.Group
                android:id="@+id/player_two_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="PlayerTwoSpinner,PlayerTwoIconLabel,player_two_name"
                />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</LinearLayout>